--- a/4장/4장예제.md
+++ b/4장/4장예제.md
@@ -319,3 +319,24 @@ int main() {
 	delete[] pArray;
 }
 ```
+---
+4 - 11 string 클래스를 이용한 문자열 생성 및 출력
+```
+#include <string>
+#include <iostream>
+using namespace std;
+
+int main() {
+	string str;
+	string address("서울시 성북구 삼선동");
+	string copyAddress(address);
+
+	char text[] = { 'L', 'o', 'v', 'e', ' ', 'C', '+', '+', '\0' };
+	string title(text);
+
+	cout << str << endl;
+	cout << address << endl;
+	cout << copyAddress << endl;
+	cout << title << endl;
+}
+```
