--- a/4장/4장예제.md
+++ b/4장/4장예제.md
@@ -340,3 +340,30 @@ int main() {
 	cout << title << endl;
 }
 ```
+4 - 12 string 배열 선언과 문자열 키 입력 응용
+5개의 string 배열을 선언하고 getline()을 이용하여 문자열을 입력받아 사전 순으로 가장 뒤에 나오는 문자열을 출력하라.
+```
+#include <string>
+#include <iostream>
+using namespace std;
+
+int main() {
+	string names[5];
+
+	for (int i = 0; i < 5; i++) {
+		cout << "이름 >> ";
+		getline(cin, names[i], '\n');
+	}
+
+	string latter = names[0];
+	for (int i = 1; i < 5; i++) {
+		if (latter < names[i]) {
+			latter = names[i];
+		}
+	}
+	cout << "사전에서 가장 뒤에 나오는 문자열은 " << latter << endl;
+}
+```
+4 - 13 문자열을 입력 받고 회전시키기
+빈칸을 포함하는 문자열을 입력 받고, 한 문자씩 왼쪽으로 회전하도록 문자열을 변경하고 출력하라
+```
