--- a/4장/4장예제.md
+++ b/4장/4장예제.md
@@ -353,6 +353,11 @@ int main() {
 	for (int i = 0; i < 5; i++) {
 		cout << "이름 >> ";
 		getline(cin, names[i], '\n');
+
+		// getline(cin, s, '\n) 함수는 입력 스트림 'cin'에서 지정된 구분자(여기서는 \n)
+		// 를 만날때마다 문자를 읽는다. 그리고 읽은 문자들을 문자열 변수 's'에 저장한다.
+		// 즉 사용자가 엔터를 치기 전까지 입력된 문자열을 읽어 s에 저장한다.
+
 	}
 
 	string latter = names[0];
@@ -366,4 +371,28 @@ int main() {
 ```
 4 - 13 문자열을 입력 받고 회전시키기
 빈칸을 포함하는 문자열을 입력 받고, 한 문자씩 왼쪽으로 회전하도록 문자열을 변경하고 출력하라
+```
+#include <string>
+#include <iostream>
+using namespace std;
+
+int main() {
+	string s;											// 빈 문자열을 가진 string 객체 생성
+
+	cout << "문자열을 입력하세요(한글 안됨) " << endl;	  
+	getline(cin, s, '\n');								// 문자열을 입력받아 s에 저장
+	
+	// getline(cin, s, '\n) 함수는 입력 스트림 'cin'에서 지정된 구분자(여기서는 \n)
+	// 를 만날때마다 문자를 읽는다. 그리고 읽은 문자들을 문자열 변수 's'에 저장한다.
+	// 즉 사용자가 엔터를 치기 전까지 입력된 문자열을 읽어 s에 저장한다.
+
+	int len = s.length();
+
+	for (int i = 0; i < len; i++) {
+		string first = s.substr(0, 1);
+		string sub = s.substr(1, len - 1);
+		s = sub + first;
+		cout << s << endl;
+	}
+}
 ```
