--- a/4장/4장예제.md
+++ b/4장/4장예제.md
@@ -388,11 +388,20 @@ int main() {
 
 	int len = s.length();
 
-	for (int i = 0; i < len; i++) {
-		string first = s.substr(0, 1);
-		string sub = s.substr(1, len - 1);
-		s = sub + first;
+	for (int i = 0; i < len; i++) {						
+		string first = s.substr(0, 1);					// 맨 앞의 문자 1개를 문자열로 분리
+		string sub = s.substr(1, len - 1);				// 나머지 문자들을 문자열로 분리
+		s = sub + first;								// 두 문자열을 연결하여 새로운 문자열로 만듬
 		cout << s << endl;
+
+		// substr(): 문자열에서 특정 범위의 부분 문자열(substring)을 추출하는 함수
+		// [예시]
+		// string s = "Hello, world!";
+		// 첫 번째 문자부터 5개의 문자를 추출
+		// string sub1 = s.substr(0, 5); // sub1 = "Hello"		
+		// 7번째 문자부터 끝까지 추출
+		// string sub2 = s.substr(6); // sub2 = "world!"
+		// 두 번째 매개변수를 생략하면, 시작 위치부터 문자열 끝까지의 모든 문자열을 추출
 	}
 }
 ```
