--- a/4장/4장예제.md
+++ b/4장/4장예제.md
@@ -369,6 +369,7 @@ int main() {
 	cout << "사전에서 가장 뒤에 나오는 문자열은 " << latter << endl;
 }
 ```
+---
 4 - 13 문자열을 입력 받고 회전시키기
 빈칸을 포함하는 문자열을 입력 받고, 한 문자씩 왼쪽으로 회전하도록 문자열을 변경하고 출력하라
 ```
@@ -403,5 +404,41 @@ int main() {
 		// string sub2 = s.substr(6); // sub2 = "world!"
 		// 두 번째 매개변수를 생략하면, 시작 위치부터 문자열 끝까지의 모든 문자열을 추출
 	}
+}
+```
+---
+4 - 14 문자열 처리 응용 (덧셈 문자열을 입력 받아 덧셈 실행)
+4+125+4+77+102 등으로 표현된 덧셈식을 문자열로 입력받아 계산하는 프로그램 작성하라.
+```
+#include <string>
+#include <iostream>
+using namespace std;
+
+int main() {
+	string s;
+
+	cout << "7+23+5+100+5와 같이 덧셈 문자열을 입력하세요." << endl;
+	getline(cin, s, '\n');												// 문자열 입력
+	int sum = 0;
+	int startIndex = 0;													// 문자열 내에 검색할 시작 인덱스
+	while (true) {
+		int fIndex = s.find('+', startIndex);							
+		if (fIndex == -1) {												// '+'문자 발견할 수 없음
+			string part = s.substr(startIndex);
+			if (part == "") {											// +로 끝나는 경우
+				break;													
+			}
+			cout << part << endl;
+			sum += stoi(part);											// 문자열을 수로 변환하여 더하기
+			// stoi() 문자열을 정수로 변환하는 함수
+			break;
+		}
+		int count = fIndex - startIndex;								// 서브스트링으로 자를 문자 개수
+		string part = s.substr(startIndex, count);						// 서브스트링 만들기
+		cout << part << endl;
+		sum += stoi(part);												// 문자열을 정수로 변환하여 더하기
+		startIndex = fIndex + 1;										// 검색을 시작할 인덱스 전진
+	}
+	cout << "숫자들의 합은" << sum;
 }
 ```
