--- a/4장/4장예제.md
+++ b/4장/4장예제.md
@@ -442,3 +442,43 @@ int main() {
 	cout << "숫자들의 합은" << sum;
 }
 ```
+---
+4 - 15 문자열 find 및 replace
+&가 입력될 때까지 여러 줄의 영문 문자열을 입력 받고, 찾는 문자열과 대치할 문자열을 각각 입력받아 문자열을 변경하라
+```
+#include <string>
+#include <iostream>
+using namespace std;
+
+int main() {
+	string s;
+	cout << "여려 줄의 문자열을 입력하세요. 입력의 끝은 &문자입니다." << endl;
+	getline(cin, s, '&');
+	cin.ignore(); // & 뒤에 따라오는 엔터키를 제거하기위한 코드
+	string f, r;
+	cout << endl << "find: ";
+	getline(cin, f, '\n');
+	cout << "replace: ";
+	getline(cin, r, '\n');
+
+	int startIndex = 0;
+	while (true) {
+		int fIndex = s.find(f, startIndex);	// startIndex부터 문자열 f 검색
+		// find(): 문자열에서 특정 문자열이나 문자의 위치(index)를 찾는 함수
+		// 첫번째 매개변수: 찾으려는 무자열 또는 문자
+		// 두번째 매개변수: 검색을 시작할 위치(index)
+		// 세번째 매개변수: 검색할 문자열의 길이
+		
+		if (fIndex == -1) {
+			break;
+		}
+		s.replace(fIndex, f.length(), r);	// fIndex부터 문자열 f의 길이만큼 문자열 r로 변경
+		// replace(): 문자열에서 특정 부분 문자열을 다른 문자열로 교체하는 함수
+		// 첫번째 매개변수: 교체하려는 문자열의 시작위치(index)
+		// 두번째 매개변수: 교체하려는 문자열의 길이
+		// 세번째 매개변수: 겨체할 새로운 문자열
+		startIndex = fIndex + r.length();
+	}
+	cout << s << endl;
+}
+```
