--- a/4장/4장문제.md
+++ b/4장/4장문제.md
@@ -152,3 +152,84 @@ int main() {
     return 0;
 }
 ```
+---
+작동여부: N (오작동)
+---
+chatgpt코드
+```
+#include <iostream>
+#include <string>
+using namespace std;
+
+class Name {
+    string first, last;
+public:
+    string get_first() { return first; }
+    string get_last() { return last; }
+    void set_name(string f, string l);  
+};
+
+class PersonManager {
+    Name* p;
+    int nofp; 
+public:
+    PersonManager(int n);    
+    void show();             
+    int serarch(string str); 
+    ~PersonManager();        
+};
+
+void Name::set_name(string f, string l) {
+    first = f;
+    last = l;
+}
+
+PersonManager::PersonManager(int n) {
+    cout << "Enter " << n << " first and last names" << endl;
+    p = new Name[n];
+    nofp = n;
+    string a, b;
+    for (int i = 0; i < n; i++) {
+        cin >> a >> b;
+        p[i].set_name(a, b);
+    }    
+}
+
+PersonManager::~PersonManager() {
+    cout << "delete [] p;" << endl;
+    delete [] p;
+}
+
+void PersonManager::show() {
+    for (int i = 0; i < nofp; i++) {
+        cout << p[i].get_first() << " " << p[i].get_last() << endl;
+    }
+}
+
+int PersonManager::serarch(string str) {
+    int cnt = 0;
+    for (int i = 0; i < nofp; i++) {
+        if (str == p[i].get_first() || str == p[i].get_last()) {
+            cnt++;
+        }
+    }
+    return cnt;
+}
+
+int main() {
+    int n;
+    cout << "Enter number of people." << endl;
+    cin >> n;
+
+    PersonManager people(n);
+
+    people.show();
+
+    cout << "Enter search name." << endl;
+    string str;
+    cin >> str;
+    cout << people.serarch(str) << endl;
+
+    return 0;
+}
+```
