--- a/5장/5장예제/5-1.md
+++ b/5장/5장예제/5-1.md
@@ -48,8 +48,11 @@ int main() {
 ```
 실행결과
 ---
-생성자 실행 radius = 30
-소멸자 실행 radius = 31
+생성자 실행 radius = 30			// waffle 생성
+소멸자 실행 radius = 31			// c의 생성자 실힝되지 않았음, c소멸
 30
-소멸자 실행 radius = 30
+소멸자 실행 radius = 30			// waffle 소멸
+---
+---
+값에 의한 호출(call by value)은 함수 호출 방법 중 하나로, 함수를 호출할 때 인자로 전달되는 값의 복사본을 함수 내부로 전달하는 방식이다. 이 방식에서 함수 내부에서 전달된 인자 값을 변경해도, 원본 값은 변경되지 않는다.
 ---
