--- a/5장/5장예제/참조.md
+++ b/5장/5장예제/참조.md
@@ -4,7 +4,7 @@
 참조는 '&' 기호를 사용하여 정의한다.
 ---
 
-예시
+##예시
 ``` 
 int a = 10;
 int& ref = a;
@@ -79,3 +79,141 @@ int main() {
 	cout << refc.getArea() << " " << circle.getArea();
 }
 ```
+---
+참조 매개변수로 리턴하기
+---
+참조 매개 변수를 통해 평균을 리턴하고 리턴문을 통해서는 함수의 성공 여부를 리턴하도록 average() 함수를 작성하라
+```
+#include <iostream>
+using namespace std;
+
+bool average(int a[], int size, int& avg) { // 참조 매개변수 avg에 평균값을 전달
+	if (size <= 0) {
+		return false;
+	}
+	int sum = 0;
+	for (int i = 0; i < size; i++) {
+		sum += a[i];
+	}
+	avg = sum / size;
+	return true;
+}
+
+int main() {
+	int x[] = { 0, 1, 2, 3, 4, 5 };
+	int avg;
+	if (average(x, 6, avg)) {	// avg에 평균이 넘어오고 average()는 true를 리턴
+		cout << "평균은 " << avg << endl;
+	}
+	else {
+		cout << "매개 변수 오류" << endl;
+	}
+	if (average(x, -2, avg)) {	// avg의 값은 의미 없고 average()는 false를 리턴
+		cout << "평균은 " << avg << endl;
+	}
+	else {
+		cout << "매개 변수 오류 " << endl;
+	}
+}
+```
+참조에 의한 호출로 Circle 객체에 참조 전달
+```
+#include <iostream>
+using namespace std;
+
+class Circle {
+private:
+	int radius;
+public:
+	Circle();
+	Circle(int r);
+	~Circle();
+	double getArea() {
+		return 3.14 * radius * radius;
+	}
+	int getRadius() {
+		return radius;
+	}
+	void setRadius(int radius) {
+		this->radius = radius;
+	}
+};
+
+Circle::Circle() {
+	radius = 1;
+	cout << "생성자 실행 radius = " << radius << endl;
+}
+
+Circle::Circle(int radius) {
+	this->radius = radius;
+	cout << "생성자 실행 radius = " << radius << endl;
+}
+
+Circle::~Circle() {
+	cout << "소멸자 실행 radius = " << radius << endl;
+}
+
+void increaseCircle(Circle& c) { // 참조 매개변수 c
+	int r = c.getRadius();
+	c.setRadius(r + 1);
+}
+
+int main() {
+	Circle waffle(30);
+	increaseCircle(waffle); // 참조에 의한 호출
+	cout << waffle.getRadius() << endl;
+}
+```
+###실행결과
+생성자 실행 radius = 30
+31
+소멸자 실행 radius = 31
+---
+실습: 참조 매개 변수를 가진 함수 만들기
+```
+#include <iostream>
+using namespace std;
+
+class Circle {
+	int radius;
+public:
+	Circle() {
+		radius = 1;
+	}
+	Circle(int radius) {
+		this->radius = radius;
+	}
+	void setRadius(int radius) {
+		this->radius = radius;
+	}
+	double getArea() {
+		return 3.14 * radius * radius;
+	}
+};
+// 내가 작성한 코드
+int readRadius(Circle &d) {
+	int r;
+	cout << "정수 값으로 반지름을 입력하세요>>";
+	cin >> r;
+	d.setRadius(r);
+	return 0;
+}
+// 정답 코드
+/*
+void readRadius(Circle &c) {
+int r;
+cout << "정수 값으로 반지름을 입력하세요>>";
+cin >> r; // 반지름 값 입력
+c.setRadius(r); // 객체 c에 반지름 설정
+}
+*/
+
+int main() {
+	Circle donut;
+	readRadius(donut);
+	cout << "donut의 면적 = " << donut.getArea() << endl;
+}
+```
+실행결과
+###정수 값으로 반지름을 입력하세요>>3
+###donut의 면적 = 28.26
