--- a/5장/5장예제/참조.md
+++ b/5장/5장예제/참조.md
@@ -217,3 +217,60 @@ int main() {
 실행결과
 ###정수 값으로 반지름을 입력하세요>>3
 ###donut의 면적 = 28.26
+---
+참조리턴
+```
+#include <iostream>
+using namespace std;
+
+char& find(char s[], int index) {
+	return s[index]; // s[index] 공간의 참조 리턴
+}
+
+int main() {
+	char name[] = "mike";
+	cout << name << endl;
+
+	find(name, 0) = 'S'; // find()가 리턴한 위치에 문자 'm' 저장
+	cout << name << endl;
+	
+	char& ref = find(name, 2); // ref는 name[2] 참조
+	ref = 't';
+	cout << name << endl;
+}
+```
+복사 생성자
+```
+#include <iostream>
+using namespace std;
+
+class Circle {
+private:
+	int radius;
+public:
+	Circle(const Circle& c); // 복사 생성자 선언
+	Circle() {
+		radius = 1;	
+	}
+	Circle(int radius) {
+		this->radius = radius;
+	}
+	double getArea() {
+		return 3.14 * radius * radius;
+	}
+};
+
+Circle::Circle(const Circle& c) { // 복사 생성자 구현
+	this->radius = c.radius;
+	cout << "복사 생성자 실행 radius = " << radius << endl;
+}
+
+int main() {
+	Circle src(30); // src 객체의 보통 생성자 호출
+	Circle dest(src); // dest 객체의 복사 생성자 호출
+					  // dest 객체가 생성될 때 Circle(const Circle& c)
+
+	cout << "원본의 면적 = " << src.getArea() << endl;
+	cout << "사본의 면적 = " << dest.getArea() << endl;
+}
+```
